forms-flow-bpm/dhcho/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-bpm
  namespace : forms-flow-bpm
  labels:
    app.kubernetes.io/name: camunda
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: camunda
  template:
    metadata:
      labels:
        app.kubernetes.io/name: camunda
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-bpm
          image: sofiamunicipalitydigitall/forms-flow-bpm:latest
          ports:
            - containerPort: 8080
              name: http-camunda
              protocol: TCP
