forms-flow-bpm/dhcho/dev/service_dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: forms-flow-bpm-svc
  namespace: forms-flow-bpm
  labels:
    app.kubernetes.io/name: camunda
spec:
  selector:
    app.kubernetes.io/name: camunda
  ports:
    - name: forms-flow-bpm-port
      protocol: TCP
      port: 8080
      targetPort: 8080
