forms-flow-bpm/dhcho/dev/ingress_dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forms-flow-bpm-nginx
  namespace: forms-flow-bpm
  #annotations:
   # kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "camunda-dev-eservices.egov.bg"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: forms-flow-bpm-svc
            port:
              number: 8080
